WikimediaApiPortal: .imeselector-toggle css class (for Language settings icon) z-index increase, so it is bigger than bootstrap's .fixed-top z-index, which is 1030 and partially hides the icon.
Bug: T259666

--- a/resources/skin.wikimediaapiportal.styles/common-fixes.less
+++ b/resources/skin.wikimediaapiportal.styles/common-fixes.less
@@ -23,3 +23,7 @@
 		font-weight: bold;
 	}
 }
+
+.imeselector-toggle {
+	z-index: 9999 !important;
+}
